--- a/AwsLambdaProject.postman_collection.json
+++ b/AwsLambdaProject.postman_collection.json
@@ -7,7 +7,313 @@
 	},
 	"item": [
 		{
+			"name": "Negative Scenarios",
+			"item": [
+				{
+					"name": "Create Post",
+					"item": [
+						{
+							"name": "When title is blank",
+							"request": {
+								"method": "POST",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\n    \"title\": \"\",\n    \"body\": \"This is the content of my new post.\",\n    \"tags\": [\"example\"]\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/posts",
+									"protocol": "https",
+									"host": [
+										"ftrm3yzgn4",
+										"execute-api",
+										"eu-north-1",
+										"amazonaws",
+										"com"
+									],
+									"path": [
+										"production",
+										"posts"
+									]
+								}
+							},
+							"response": []
+						},
+						{
+							"name": "When body is blank",
+							"request": {
+								"method": "POST",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\n    \"title\": \"My New Post\",\n    \"body\": \"\",\n    \"tags\": [\"example\"]\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/posts",
+									"protocol": "https",
+									"host": [
+										"ftrm3yzgn4",
+										"execute-api",
+										"eu-north-1",
+										"amazonaws",
+										"com"
+									],
+									"path": [
+										"production",
+										"posts"
+									]
+								}
+							},
+							"response": []
+						}
+					]
+				},
+				{
+					"name": "Update Post",
+					"item": [
+						{
+							"name": "When title blank",
+							"event": [
+								{
+									"listen": "test",
+									"script": {
+										"exec": [
+											""
+										],
+										"type": "text/javascript",
+										"packages": {}
+									}
+								}
+							],
+							"request": {
+								"method": "PATCH",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\n    \"title\": \"\",\n    \"body\": \"This is\",\n    \"tags\": [\"example\"]\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682",
+									"protocol": "https",
+									"host": [
+										"ftrm3yzgn4",
+										"execute-api",
+										"eu-north-1",
+										"amazonaws",
+										"com"
+									],
+									"path": [
+										"production",
+										"post",
+										"dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682"
+									]
+								}
+							},
+							"response": []
+						},
+						{
+							"name": "When body blank",
+							"event": [
+								{
+									"listen": "test",
+									"script": {
+										"exec": [
+											""
+										],
+										"type": "text/javascript",
+										"packages": {}
+									}
+								}
+							],
+							"request": {
+								"method": "PATCH",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\n    \"title\": \"Some title\",\n    \"body\": \"\",\n    \"tags\": [\"example\"]\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682",
+									"protocol": "https",
+									"host": [
+										"ftrm3yzgn4",
+										"execute-api",
+										"eu-north-1",
+										"amazonaws",
+										"com"
+									],
+									"path": [
+										"production",
+										"post",
+										"dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682"
+									]
+								}
+							},
+							"response": []
+						},
+						{
+							"name": "When id wrong",
+							"event": [
+								{
+									"listen": "test",
+									"script": {
+										"exec": [
+											""
+										],
+										"type": "text/javascript",
+										"packages": {}
+									}
+								}
+							],
+							"request": {
+								"method": "PATCH",
+								"header": [],
+								"body": {
+									"mode": "raw",
+									"raw": "{\n    \"title\": \"My New Post Updated\",\n    \"body\": \"This is\",\n    \"tags\": [\"example\"]\n}",
+									"options": {
+										"raw": {
+											"language": "json"
+										}
+									}
+								},
+								"url": {
+									"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/some_wrong_id",
+									"protocol": "https",
+									"host": [
+										"ftrm3yzgn4",
+										"execute-api",
+										"eu-north-1",
+										"amazonaws",
+										"com"
+									],
+									"path": [
+										"production",
+										"post",
+										"some_wrong_id"
+									]
+								}
+							},
+							"response": []
+						}
+					]
+				},
+				{
+					"name": "Get Post",
+					"item": [
+						{
+							"name": "When id wrong",
+							"request": {
+								"method": "GET",
+								"header": [],
+								"url": {
+									"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/wrong_id",
+									"protocol": "https",
+									"host": [
+										"ftrm3yzgn4",
+										"execute-api",
+										"eu-north-1",
+										"amazonaws",
+										"com"
+									],
+									"path": [
+										"production",
+										"post",
+										"wrong_id"
+									]
+								}
+							},
+							"response": []
+						}
+					]
+				},
+				{
+					"name": "Delete Post",
+					"item": [
+						{
+							"name": "When id wrong",
+							"request": {
+								"method": "DELETE",
+								"header": [],
+								"url": {
+									"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/wrong_id",
+									"protocol": "https",
+									"host": [
+										"ftrm3yzgn4",
+										"execute-api",
+										"eu-north-1",
+										"amazonaws",
+										"com"
+									],
+									"path": [
+										"production",
+										"post",
+										"wrong_id"
+									]
+								}
+							},
+							"response": []
+						}
+					]
+				}
+			]
+		},
+		{
 			"name": "Get Posts",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"exec": [
+							"// Test for response status 200",
+							"pm.test(\"Status code is 200\", function () {",
+							"    pm.response.to.have.status(200);",
+							"});",
+							"",
+							"// Test for response to be JSON",
+							"pm.test(\"Response is JSON\", function () {",
+							"    pm.response.to.be.json;",
+							"});",
+							"",
+							"// Test for response body structure",
+							"pm.test(\"Response has expected structure\", function () {",
+							"    const jsonData = pm.response.json();",
+							"    ",
+							"    jsonData.forEach(item => {",
+							"        pm.expect(item).to.have.property('id').that.is.a('string');",
+							"        pm.expect(item).to.have.property('title').that.is.a('string');",
+							"        pm.expect(item).to.have.property('body').that.is.a('string');",
+							"        pm.expect(item).to.have.property('createdDate').that.is.a('string');",
+							"        pm.expect(item).to.have.property('updatedDate').that.is.a('string');",
+							"        pm.expect(item).to.have.property('tags').that.is.an('array');",
+							"    });",
+							"});"
+						],
+						"type": "text/javascript",
+						"packages": {}
+					}
+				}
+			],
 			"request": {
 				"method": "GET",
 				"header": [],
@@ -43,12 +349,45 @@
 		},
 		{
 			"name": "Create Post",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"exec": [
+							"// Test for response status 201",
+							"pm.test(\"Status code is 201\", function () {",
+							"    pm.response.to.have.status(201);",
+							"});",
+							"",
+							"// Test for response to be JSON",
+							"pm.test(\"Response is JSON\", function () {",
+							"    pm.response.to.be.json;",
+							"});",
+							"",
+							"// Test for response body structure",
+							"pm.test(\"Response has expected structure\", function () {",
+							"    const jsonData = pm.response.json();",
+							"    ",
+							"    pm.expect(jsonData).to.have.property('id').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('title').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('body').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('createdDate').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('updatedDate').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('tags').that.is.an('array');",
+							"});",
+							""
+						],
+						"type": "text/javascript",
+						"packages": {}
+					}
+				}
+			],
 			"request": {
 				"method": "POST",
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\n    \"title\": \"My New Post\",\n    \"body\": \"This is the content of my new post.\",\n    \"tags\": [\"example\", \"post\"]\n}",
+					"raw": "{\n    \"title\": \"My New Post\",\n    \"body\": \"This is the content of my new post.\",\n    \"tags\": [\"example\"]\n}",
 					"options": {
 						"raw": {
 							"language": "json"
@@ -75,6 +414,38 @@
 		},
 		{
 			"name": "Update post",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"exec": [
+							"// Test for response status 200",
+							"pm.test(\"Status code is 200\", function () {",
+							"    pm.response.to.have.status(200);",
+							"});",
+							"",
+							"// Test for response to be JSON",
+							"pm.test(\"Response is JSON\", function () {",
+							"    pm.response.to.be.json;",
+							"});",
+							"",
+							"// Test for response body structure",
+							"pm.test(\"Response has expected structure\", function () {",
+							"    const jsonData = pm.response.json();",
+							"    ",
+							"    pm.expect(jsonData).to.have.property('id').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('title').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('body').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('createdDate').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('updatedDate').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('tags').that.is.an('array');",
+							"});"
+						],
+						"type": "text/javascript",
+						"packages": {}
+					}
+				}
+			],
 			"request": {
 				"method": "PATCH",
 				"header": [],
@@ -88,7 +459,7 @@
 					}
 				},
 				"url": {
-					"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/ffe37117-d63c-4ca8-b2e2-a68260865fbf",
+					"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682",
 					"protocol": "https",
 					"host": [
 						"ftrm3yzgn4",
@@ -100,7 +471,7 @@
 					"path": [
 						"production",
 						"post",
-						"ffe37117-d63c-4ca8-b2e2-a68260865fbf"
+						"dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682"
 					]
 				}
 			},
@@ -108,11 +479,43 @@
 		},
 		{
 			"name": "Get Post",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"exec": [
+							"// Test for response status 200",
+							"pm.test(\"Status code is 200\", function () {",
+							"    pm.response.to.have.status(200);",
+							"});",
+							"",
+							"// Test for response to be JSON",
+							"pm.test(\"Response is JSON\", function () {",
+							"    pm.response.to.be.json;",
+							"});",
+							"",
+							"// Test for response body structure",
+							"pm.test(\"Response has expected structure\", function () {",
+							"    const jsonData = pm.response.json();",
+							"    ",
+							"    pm.expect(jsonData).to.have.property('id').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('title').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('body').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('createdDate').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('updatedDate').that.is.a('string');",
+							"    pm.expect(jsonData).to.have.property('tags').that.is.an('array');",
+							"});"
+						],
+						"type": "text/javascript",
+						"packages": {}
+					}
+				}
+			],
 			"request": {
 				"method": "GET",
 				"header": [],
 				"url": {
-					"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/ffe37117-d63c-4ca8-b2e2-a68260865fbf",
+					"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682",
 					"protocol": "https",
 					"host": [
 						"ftrm3yzgn4",
@@ -124,7 +527,7 @@
 					"path": [
 						"production",
 						"post",
-						"ffe37117-d63c-4ca8-b2e2-a68260865fbf"
+						"dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682"
 					]
 				}
 			},
@@ -132,11 +535,31 @@
 		},
 		{
 			"name": "Delete Post",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"exec": [
+							"// Test for response status 204",
+							"pm.test(\"Status code is 204\", function () {",
+							"    pm.response.to.have.status(204);",
+							"});",
+							"",
+							"// Test for empty response body",
+							"pm.test(\"Response body is empty\", function () {",
+							"    pm.response.to.have.body(\"\");",
+							"});"
+						],
+						"type": "text/javascript",
+						"packages": {}
+					}
+				}
+			],
 			"request": {
 				"method": "DELETE",
 				"header": [],
 				"url": {
-					"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/ffe37117-d63c-4ca8-b2e2-a68260865fbf",
+					"raw": "https://ftrm3yzgn4.execute-api.eu-north-1.amazonaws.com/production/post/dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682",
 					"protocol": "https",
 					"host": [
 						"ftrm3yzgn4",
@@ -148,7 +571,7 @@
 					"path": [
 						"production",
 						"post",
-						"ffe37117-d63c-4ca8-b2e2-a68260865fbf"
+						"dfc9ec9c-85d0-4ef1-ac3a-7955d5afa682"
 					]
 				}
 			},
@@ -156,6 +579,39 @@
 		},
 		{
 			"name": "Get Posts Public",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"exec": [
+							"// Test for response status 200",
+							"pm.test(\"Status code is 200\", function () {",
+							"    pm.response.to.have.status(200);",
+							"});",
+							"",
+							"// Test for response to be JSON",
+							"pm.test(\"Response is JSON\", function () {",
+							"    pm.response.to.be.json;",
+							"});",
+							"",
+							"// Test for response body structure",
+							"pm.test(\"Response has expected structure\", function () {",
+							"    const jsonData = pm.response.json();",
+							"    ",
+							"    jsonData.forEach(item => {",
+							"        pm.expect(item).to.have.property('title').that.is.a('string');",
+							"        pm.expect(item).to.have.property('body').that.is.a('string');",
+							"        pm.expect(item).to.have.property('createdDate').that.is.a('string');",
+							"        pm.expect(item).to.have.property('updatedDate').that.is.a('string');",
+							"        pm.expect(item).to.have.property('tags').that.is.an('array');",
+							"    });",
+							"});"
+						],
+						"type": "text/javascript",
+						"packages": {}
+					}
+				}
+			],
 			"request": {
 				"method": "GET",
 				"header": [],
