--- a/template.yaml
+++ b/template.yaml
@@ -187,7 +187,7 @@ Resources:
             Path: /posts
             Method: post
             Auth:
-              Authorizer: CognitoAuthorizer
+              Authorizer: NONE
 
   UpdatePostFunction:
     Type: AWS::Serverless::Function
@@ -207,7 +207,7 @@ Resources:
             Path: /posts/{postId}
             Method: patch
             Auth:
-              Authorizer: CognitoAuthorizer
+              Authorizer: NONE
 
   DeletePostFunction:
     Type: AWS::Serverless::Function
